# SceneManager.gd
# åœºæ™¯ç®¡ç†å™¨

extends Node

var main_menu: Control
var identity_select: Control
var game_ui: Control

func _ready():
	# æ·»åŠ åˆ°ç»„ä»¥ä¾¿å…¶ä»–è„šæœ¬å¯ä»¥æ‰¾åˆ°
	add_to_group("scene_manager")

	# ä½¿ç”¨ call_deferred ç¡®ä¿åœºæ™¯å®Œå…¨åŠ è½½åå†æŸ¥æ‰¾èŠ‚ç‚¹
	call_deferred("_find_nodes_and_show_menu")

func _find_nodes_and_show_menu():
	# ä»æ ¹èŠ‚ç‚¹å¼€å§‹æŸ¥æ‰¾
	var root = get_tree().root
	main_menu = root.find_child("MainMenu", true, false)
	identity_select = root.find_child("IdentitySelect", true, false)
	game_ui = root.find_child("GameUI", true, false)

	if not main_menu:
		push_error("SceneManager: MainMenu not found!")
	if not identity_select:
		push_error("SceneManager: IdentitySelect not found!")
	if not game_ui:
		push_error("SceneManager: GameUI not found!")
	else:
		print("SceneManager: All nodes found!")
		show_main_menu()

func show_main_menu():
	if main_menu:
		main_menu.visible = true
	if identity_select:
		identity_select.visible = false
	if game_ui:
		game_ui.visible = false

func show_identity_select():
	if main_menu:
		main_menu.visible = false
	if identity_select:
		identity_select.visible = true
	if game_ui:
		game_ui.visible = false

func show_game():
	if main_menu:
		main_menu.visible = false
	if identity_select:
		identity_select.visible = false
	if game_ui:
		game_ui.visible = true

	# åˆå§‹åŒ– HexMap
	if game_ui and game_ui.has_method("setup_hex_map_internal"):
		game_ui.setup_hex_map_internal()

	update_game_ui()

func update_game_ui():
	if not game_ui:
		return
	if not game_ui.visible:
		return

	var gm = get_tree().get_first_node_in_group("game_manager")
	if not gm:
		return

	# æ›´æ–°å›åˆ
	var turn_label = game_ui.get_node("TopBar/TopBarContent/TurnLabel")
	if turn_label:
		turn_label.text = "ç¬¬ " + str(gm.turn_number) + " å›åˆ"

	# æ›´æ–°èµ„æº
	var credits_label = game_ui.get_node("TopBar/TopBarContent/Resources/CreditsLabel")
	if credits_label:
		credits_label.text = "ğŸ’° " + str(gm.credits)

	var fuel_label = game_ui.get_node("TopBar/TopBarContent/Resources/FuelLabel")
	if fuel_label:
		fuel_label.text = "â›½ " + str(gm.fuel)

	var minerals_label = game_ui.get_node("TopBar/TopBarContent/Resources/MineralsLabel")
	if minerals_label:
		minerals_label.text = "ğŸ’ " + str(gm.minerals)

	var research_label = game_ui.get_node("TopBar/TopBarContent/Resources/ResearchLabel")
	if research_label:
		research_label.text = "ğŸ”¬ " + str(gm.research_points)

	# æ›´æ–°ç•ŒåŒºä¿¡æ¯
	var zone_name = game_ui.get_node("CenterPanel/ZoneInfo/InfoContent/ZoneName")
	if zone_name:
		zone_name.text = gm.current_zone.name

	var zone_type = game_ui.get_node("CenterPanel/ZoneInfo/InfoContent/ZoneType")
	if zone_type:
		zone_type.text = "è¶…å…‰é€Ÿç•ŒåŒº (FTL)" if gm.current_zone.type == 0 else "å…‰é€Ÿå—é™ç•ŒåŒº"

	var zone_desc = game_ui.get_node("CenterPanel/ZoneInfo/InfoContent/ZoneDesc")
	if zone_desc:
		zone_desc.text = gm.current_zone.description

	var zone_stats = game_ui.get_node("CenterPanel/ZoneInfo/InfoContent/ZoneStats")
	if zone_stats:
		zone_stats.text = "ç§‘æŠ€ç­‰çº§: " + str(gm.current_zone.tech_level) + " | å¨èƒ: " + str(gm.current_zone.threat_level)

	# åˆ·æ–°å…­è¾¹å½¢åœ°å›¾
	var hex_map_container = game_ui.get_node("HexMapContainer")
	if hex_map_container:
		for child in hex_map_container.get_children():
			if child is HexMap:
				child.refresh_map()
				break
